--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Testes de Contrato com Pactum",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./test/**/*.test.js",
+    "test": "mocha test/api test/contracts --reporter mochawesome",
     "test:gql": "mocha ./test/graphql/**/*.test.js",
     "test:rest": "mocha ./test/api/**/*.test.js",
     "test:contractProvider": "mocha ./test/contract/loginProvider.test.js",
@@ -14,7 +14,8 @@
   "author": "ernestosbarbosa",
   "license": "ISC",
   "devDependencies": {
-    "mocha": "^10.3.0",
+    "mocha": "^10.8.2",
+    "mochawesome": "^7.1.4",
     "pactum": "^3.6.0"
   },
   "dependencies": {
