--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Testes de Contrato com Pactum",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/api test/contracts --reporter mochawesome",
+    "test": "mocha \"test/**/*.test.js\" --timeout 10000 --reporter mochawesome",
     "test:gql": "mocha ./test/graphql/**/*.test.js",
     "test:rest": "mocha ./test/api/**/*.test.js",
     "test:contractProvider": "mocha ./test/contract/loginProvider.test.js",
